[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CreateLobby" type="Button" parent="."]
margin_left = 422.0
margin_top = 349.0
margin_right = 532.0
margin_bottom = 419.0
text = "Create Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextEdit" parent="."]
margin_left = 421.0
margin_top = 183.0
margin_right = 704.0
margin_bottom = 230.0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyCode" type="TextEdit" parent="."]
margin_left = 421.0
margin_top = 250.0
margin_right = 704.0
margin_bottom = 297.0
text = "Lobby code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLobby" type="Button" parent="."]
margin_left = 591.0
margin_top = 349.0
margin_right = 701.0
margin_bottom = 419.0
text = "Join Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="."]
visible = false
margin_left = 422.294
margin_top = 312.422
margin_right = 547.294
margin_bottom = 335.422
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.301961, 0.301961, 1 )
text = "Lobby not found"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CreateLobby" to="." method="_on_CreateLobby_pressed"]
[connection signal="focus_entered" from="Name" to="." method="_on_Name_focus_entered"]
[connection signal="focus_exited" from="Name" to="." method="_on_Name_focus_exited"]
[connection signal="focus_entered" from="LobbyCode" to="." method="_on_LobbyCode_focus_entered"]
[connection signal="focus_exited" from="LobbyCode" to="." method="_on_LobbyCode_focus_exited"]
[connection signal="pressed" from="JoinLobby" to="." method="_on_JoinLobby_pressed"]
